[project]
name = "nfce-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "camoufox>=0.4.11",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "uvicorn>=0.44.0",
]
